Fix navbar hamburger-icon alignment on mobile and tablet

--- a/landing-pages/site/assets/scss/_navbar.scss
+++ b/landing-pages/site/assets/scss/_navbar.scss
@@ -82,7 +82,7 @@
   &__theme-toggle {
     display: flex;
     align-items: center;
-    order: 10; // push to far right in the navbar flex layout
+    margin-left: auto; // push to far right in the navbar flex layout
 
     @media (max-width: $tablet) {
       margin-right: 12px;
